--- a/trunk/mts/src/main/tutorial/diameter/tester.properties
+++ b/trunk/mts/src/main/tutorial/diameter/tester.properties
@@ -28,3 +28,11 @@ logs.STORAGE_LOCATION = MEMORY
 # [integer] 
 logs.MAX_STRING_LENGTH = 10000
 
+# Class name for the stack protocol for DIAMETER protocol
+# = com.devoteam.srit.xmlloader.diameter.dk.StackDiameter for dk (danish) stack
+# = com.devoteam.srit.xmlloader.diameter.light.StackDiameter for light DIAMETER 
+#   stack developped by Ericsson
+# (class name)
+# [string] (restart)
+protocol.STACK_CLASS_NAME_DIAMETER = com.devoteam.srit.xmlloader.diameter.light.StackDiameter
+
