--- a/trunk/mts/src/main/tutorial/diameter/load/tester.properties
+++ b/trunk/mts/src/main/tutorial/diameter/load/tester.properties
@@ -12,7 +12,7 @@ runprofile.DURATION = 600
 # 2 = INFO
 # 3 = DEBUG
 # [enumeration] ERROR|WARN|INFO|DEBUG 
-logs.MAXIMUM_LEVEL = DEBUG
+logs.MAXIMUM_LEVEL = WARN
 
 # Class name for the stack protocol for DIAMETER protocol
 # = com.devoteam.srit.xmlloader.diameter.dk.StackDiameter for dk (danish) stack
