--- a/trunk/mts/src/main/conf/sctp.properties
+++ b/trunk/mts/src/main/conf/sctp.properties
@@ -85,7 +85,7 @@ connect.MAX_INIT_TIMEO = 20
 
 # Default client data chunk 'stream' parameter (Stream Identifier) 
 # [integer]
-client.DEFAULT_STREAM = 1
+client.DEFAULT_STREAM = 111
 
 # Default client data chunk 'SSN' attribute (Stream Sequence Number)
 # [integer]
@@ -95,13 +95,29 @@ client.DEFAULT_SSN = 255
 # [integer]
 client.DEFAULT_PPID = 987654321
 
+# Default client TODO
+# [integer]
+client.DEFAULT_FLAGS = 11111111
+
+# Default client TODO
+# [integer]
+client.DEFAULT_CONTEXT = 22222222
+
+# Default client TODO
+# [integer]
+client.DEFAULT_TTL = 33333333
+
 # Default client data chunk 'TSN' attribute (Transmission Sequence Number)
 # [integer]
-client.DEFAULT_TSN = 123456789
+client.DEFAULT_TSN = 10000000
+
+# Default client data chunk 'CUMTSN' attribute (Cumulative Transmission Sequence Number)
+# [integer]
+client.DEFAULT_CUMTSN = 90000000
 
 # Default client data chunk 'AID' attribute (Association Identifier)
 # [integer]
-client.DEFAULT_AID = 10000
+client.DEFAULT_AID = 55555555
 
 
 # Flag to define whether IMSloader shall generate a message (empty) 
