--- a/trunk/mts/src/main/conf/sctp.properties
+++ b/trunk/mts/src/main/conf/sctp.properties
@@ -47,7 +47,7 @@ operations.RECEIVE_TIMEOUT = 10
 # be verified since it is a negotiated number with the remote endpoint.  
 # The default value of 0 indicates to use the endpoint default value.
 # [integer]
-connect.NUM_OSTREAMS = 10
+connect.NUM_OSTREAMS = 30000
 
 # This value represents the maximum number of inbound 
 # streams the application is prepared to support. This value is bounded 
@@ -56,7 +56,7 @@ connect.NUM_OSTREAMS = 10
 # Operating System limit overrides the value requested by the user. 
 # The default value of 0 indicates to use the endpoints default  value.
 # [integer]
-connect.MAX_INSTREAMS = 10
+connect.MAX_INSTREAMS = 40000
 
 # This integer specifies how many attempts the SCTP 
 # endpoint should make at resending the INIT.  This value overrides 
@@ -65,7 +65,7 @@ connect.MAX_INSTREAMS = 10
 # This is normally set to the system's default 'Max.Init.Retransmit' 
 # value.
 # [integer]
-connect.MAX_ATTEMPTS = 20
+connect.MAX_ATTEMPTS = 50000
 
 # This value represents the largest Time-Out or 
 # RTO value (in milliseconds) to use in attempting an INIT.  
@@ -76,7 +76,7 @@ connect.MAX_ATTEMPTS = 20
 # A default value of 0 indicates to use the endpoints default value.  
 # This is normally set to the system's 'RTO.Max' value (60 seconds).
 # [integer]
-connect.MAX_INIT_TIMEO = 20
+connect.MAX_INIT_TIMEO = 60000
 
 
 #######################################################
@@ -85,11 +85,11 @@ connect.MAX_INIT_TIMEO = 20
 
 # Default client data chunk 'stream' parameter (Stream Identifier) 
 # [integer]
-client.DEFAULT_STREAM = 111
+client.DEFAULT_STREAM = 11222
 
 # Default client data chunk 'SSN' attribute (Stream Sequence Number)
 # [integer]
-client.DEFAULT_SSN = 255
+client.DEFAULT_SSN = 33444
 
 # Default client data chunk 'PPID' attribute (Payload Protocol Identifier)
 # [integer]
@@ -97,7 +97,7 @@ client.DEFAULT_PPID = 987654321
 
 # Default client TODO
 # [integer]
-client.DEFAULT_FLAGS = 11111111
+client.DEFAULT_FLAGS = 1
 
 # Default client TODO
 # [integer]
