--- a/trunk/mts/src/main/tutorial/sctp/config_server/sctp.properties
+++ b/trunk/mts/src/main/tutorial/sctp/config_server/sctp.properties
@@ -1,3 +1,7 @@
+# Default client TODO
+# [integer] 
+client.DEFAULT_FLAGS = 1
+
 # Flag to define whether IMSloader shall generate a message (empty) 
 # when a server side receives a transport connection opening or closing.
 # [boolean] 
@@ -10,5 +14,5 @@ GENERATE_TRANSPORT_MESSAGE = true
 # operation and are of course protocol dependant
 # type list<string> (list of path keywords)
 # [string] 
-route.SCENARIO_NAME = channel.name|listenpoint.name|message.protocol|channel.localPort|channel.name
+route.SCENARIO_NAME = message.protocol|channel.localPort|channel.name
 
