--- a/trunk/mts/src/main/tutorial/rtp/rtp.properties
+++ b/trunk/mts/src/main/tutorial/rtp/rtp.properties
@@ -1,3 +1,8 @@
+# Flag to listen to TLS transport
+# [boolean]
+# NOT SUPPORTED
+# [string] 
+listenpoint.LISTEN_TLS = true
 
 # Flag to activate the retransmission filtering on messages receipt; 
 # if true then a retransmission messages are not routed to the scenario
