--- a/trunk/mts/src/main/conf/sigtran.properties
+++ b/trunk/mts/src/main/conf/sigtran.properties
@@ -64,7 +64,7 @@ listenpoint.TRANSPORT = tcp
 # 3 = MTP level 3 User Adaptation (M3UA)
 # 6 = V5 User Adaptation  (V5UA)
 # [enumeration] 1|3|6
-server.DEFAULT_PPID = 0
+server.DEFAULT_PPID = 3
 
 
 #######################################################
@@ -120,7 +120,7 @@ route.MESSAGE_ID =
 # operation and are of course protocol dependant
 # type list<string> (list of path keywords)
 # [string]
-route.SCENARIO_NAME = listenpoint.localPort|message.protocol
+route.SCENARIO_NAME = listenpoint.localPort|message.type|message.protocol
 
 # This ID is used to identify retransmissions. A message having the same retranmissionId as a previous one
 # will be handled has a retransmission. If it is a request it will eventually lead to the retransmission of
