--- a/trunk/mts/src/main/tutorial/sigtran/m3ua/TCAP/sctp.properties
+++ b/trunk/mts/src/main/tutorial/sigtran/m3ua/TCAP/sctp.properties
@@ -1,3 +1,20 @@
+# This is an integer number representing the number 
+# of streams that the application wishes to be able to send to.  
+# This number is confirmed in the SCTP_COMM_UP notification and must 
+# be verified since it is a negotiated number with the remote endpoint.  
+# The default value of 0 indicates to use the endpoint default value.
+# [integer] 
+connect.NUM_OSTREAMS = 32
+
+# This value represents the maximum number of inbound 
+# streams the application is prepared to support. This value is bounded 
+# by the actual implementation.  In other words the user MAY be able to 
+# support more streams than the Operating System.  In such a case, the 
+# Operating System limit overrides the value requested by the user. 
+# The default value of 0 indicates to use the endpoints default  value.
+# [integer] 
+connect.MAX_INSTREAMS = 32
+
 # Default client data chunk 'PPID' attribute (Payload Protocol Identifier)
 # [integer] 
 client.DEFAULT_PPID = 3
