--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,10 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ericsson.mts</groupId>
     <artifactId>mts</artifactId>
-    <version>6.4.2</version>
+    <version>6.4.3-SNAPSHOT</version>
     <packaging>jar</packaging>
-
-    <name>mts-ericsson</name>
-    <!-- <name>Multi-protocol Test Suite</name> -->
 
     <url>http://mts.arm-tool.com</url>
 
@@ -26,11 +22,9 @@
         <sonar.password>defined in ~/.m2/settings.xml</sonar.password>
         -->
         <sonar.language>java</sonar.language>
-
     </properties>
 
     <build>
-       <!-- <finalName>${artifactId}-${version}</finalName> -->
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -40,6 +34,24 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>createThriftDir</id>
+                        <phase>process-resources</phase>
+                        <configuration>
+                            <tasks>
+                                <mkdir dir="${target.mts.dir}/logs"/>
+                            </tasks>
+                        </configuration>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -73,28 +85,15 @@
                             <overWriteSnapshots>true</overWriteSnapshots>
                         </configuration>
                     </execution>
-                    <!-- copy project jar to ${target.lib.dir} -->
-                    <execution>
-                        <id>copy-installed</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>${project.groupId}</groupId>
-                                    <artifactId>${project.artifactId}</artifactId>
-                                    <version>${project.version}</version>
-                                    <type>${project.packaging}</type>
-                                </artifactItem>
-                            </artifactItems>
-                            <outputDirectory>${target.mts.dir}/lib</outputDirectory>
-                            <!-- dont want izpack standalone compiler -->
-                            <excludeGroupIds>org.codehaus.izpack</excludeGroupIds>
-                        </configuration>
-                    </execution> 
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <outputDirectory>${target.mts.dir}/lib</outputDirectory>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
@@ -197,7 +196,7 @@
                 <executions>
                     <execution>
                         <id>standard-installer</id>
-                        <phase>install</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>izpack</goal>
                         </goals>
@@ -207,41 +206,24 @@
         </plugins>
     </build>
 
-
     <repositories>
         <repository>
             <id>jboss</id>
             <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-uploads</url>
         </repository>
-        <!--repository>
-            <id>cloudhopper</id>
-            <url>http://maven.cloudhopper.com/repos/third-party/</url>
-        </repository-->        
     </repositories>
     
-    
     <dependencies>
-        <!-- build (izpack) dependency -->
-        <dependency>
-            <groupId>org.codehaus.izpack</groupId>
-            <artifactId>izpack-standalone-compiler</artifactId>
-            <version>${izpack.version}</version>
-        </dependency>
-
-        
         <!-- MTS dependencies -->
         <dependency>
-            <groupId>dom4j</groupId>
+            <groupId>org.dom4j</groupId>
             <artifactId>dom4j</artifactId>
-            <version>1.6.1</version>
-            <scope>provided</scope>
-        </dependency>        
-
+            <version>2.1.0</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
             <version>4.1.4</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
@@ -253,63 +235,47 @@
             <groupId>net.sf.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>2.3</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.sip</groupId>
             <artifactId>jain-sip-api</artifactId>
             <version>1.2</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.sip</groupId>
             <artifactId>jain-sip-ri</artifactId>
             <version>1.2</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>jfree</groupId>
             <artifactId>jfreechart</artifactId>
             <version>1.0.9</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javolution</groupId>
             <artifactId>javolution</artifactId>
             <version>5.5.1</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>dk.i1.diameter</groupId>
             <artifactId>diameter</artifactId>
             <version>0.9.6.2</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.media</groupId>
             <artifactId>jmf</artifactId>
             <version>2.1.1e</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.swinglabs</groupId>
             <artifactId>swing-layout</artifactId>
             <version>1.0.3</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.snmp4j</groupId>
             <artifactId>snmp4j</artifactId>
             <version>1.11.3</version>
-            <scope>provided</scope>
         </dependency>
-        <!-- this library is not available from now why ? -->
-        <!--dependency>
-            <groupId>snmp</groupId>
-            <artifactId>mibble-parser</artifactId>            
-            <version>2.9.2</version>
-            <scope>provided</scope>
-        </dependency-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -320,15 +286,92 @@
             <artifactId>junit</artifactId>
             <version>4.10</version>
         </dependency>
-        
-        <!-- MTS local dependencies -->
         <dependency>
             <groupId>javax.sdp</groupId>
             <artifactId>nist-sdp</artifactId>
             <version>1.0</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/nist-sdp-1.0.jar</systemPath>   
         </dependency>
+        <dependency>
+            <groupId>org.mobicents.protocols.ss7.tcap</groupId>
+            <artifactId>tcap-impl</artifactId>
+            <version>3.0.1337</version>
+        </dependency>        
+        <dependency>
+            <groupId>org.codejuicer</groupId>
+            <artifactId>binarynotes</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mobicents.protocols.asn</groupId>
+            <artifactId>asn</artifactId>
+            <version>2.0.2.FINAL</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>[3.0.0,)</version>
+        </dependency>
+        
+        <!-- DEPENDENCIES THAT ARE NOT IN PUBLIC REPOS -->        
+        <dependency>
+            <groupId>com.devoteam.srit.xmlloader.sigtran.ap.generated.map</groupId>
+            <artifactId>BN_classes_map</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope> 
+            <systemPath>${basedir}/src/main/lib/BN_classes_map.jar</systemPath>   
+        </dependency>
+        <dependency>
+            <groupId>com.devoteam.srit.xmlloader.sigtran.ap.generated.tcap</groupId>
+            <artifactId>BN_classes_tcap</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope> 
+            <systemPath>${basedir}/src/main/lib/BN_classes_tcap.jar</systemPath>   
+        </dependency>
+        <dependency>
+            <groupId>com.devoteam.srit.xmlloader.sigtran.ap.generated.cap</groupId>
+            <artifactId>BN_classes_cap</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope> 
+            <systemPath>${basedir}/src/main/lib/BN_classes_cap.jar</systemPath>   
+        </dependency>
+        <dependency>
+            <groupId>mibble-parser</groupId>
+            <artifactId>mibble-parser</artifactId>
+            <version>2.9.2</version>
+            <scope>system</scope> 
+            <systemPath>${basedir}/lib/mibble-parser-2.9.2.jar</systemPath>   
+        </dependency>
+        <dependency>
+            <groupId>Charset-SMS</groupId>
+            <artifactId>Charset-SMS</artifactId>
+            <version>0.1</version>
+            <scope>system</scope> 
+            <systemPath>${basedir}/lib/jcharset-SMS.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>pcm</groupId>
+            <artifactId>pcm</artifactId>
+            <version>0.1</version>
+            <scope>system</scope> 
+            <systemPath>${basedir}/lib/pcm.jar</systemPath>   
+        </dependency>        
+        <dependency>
+            <groupId>pcmext</groupId>
+            <artifactId>pcmext</artifactId>
+            <version>0.1</version>
+            <scope>system</scope> 
+            <systemPath>${basedir}/lib/pcmext.jar</systemPath>   
+        </dependency>    
         <dependency>
             <groupId>gp-utils</groupId>
             <artifactId>gp-utils</artifactId>
@@ -357,130 +400,5 @@
             <scope>system</scope> 
             <systemPath>${basedir}/lib/jpcap.jar</systemPath>   
         </dependency>
-        <dependency>
-            <groupId>org.mobicents.protocols.ss7.tcap</groupId>
-            <artifactId>tcap-impl</artifactId>
-            <version>3.0.1337</version>
-        </dependency>        
-        <dependency>
-            <groupId>binarynotes</groupId>
-            <artifactId>binarynotes</artifactId>
-            <version>0.1</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/binarynotes.jar</systemPath>   
-        </dependency>
-        <dependency>
-            <groupId>Charset-SMS</groupId>
-            <artifactId>Charset-SMS</artifactId>
-            <version>0.1</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/jcharset-SMS.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>pcm</groupId>
-            <artifactId>pcm</artifactId>
-            <version>0.1</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/pcm.jar</systemPath>   
-        </dependency>        
-        <dependency>
-            <groupId>pcmext</groupId>
-            <artifactId>pcmext</artifactId>
-            <version>0.1</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/pcmext.jar</systemPath>   
-        </dependency>
-        <dependency>
-            <groupId>jaxen</groupId>
-            <artifactId>jaxen</artifactId>
-            <version>1.1.1</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/jaxen-1.1.1.jar</systemPath>   
-        </dependency>
-        <dependency>
-            <groupId>mibble-parser</groupId>
-            <artifactId>mibble-parser</artifactId>
-            <version>2.9.2</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/mibble-parser-2.9.2.jar</systemPath>   
-        </dependency>
-
-        <dependency>
-            <groupId>mobicents</groupId>
-            <artifactId>asn</artifactId>
-            <version>2.0.2.FINAL</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/asn-2.0.2.FINAL.jar</systemPath>   
-        </dependency>
-        <dependency>
-            <groupId>mobicents-tcap</groupId>
-          <artifactId>api</artifactId>
-            <version>2.1.0-SNAPSHOT</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/tcap-api-2.1.0-SNAPSHOT.jar</systemPath>   
-        </dependency>
-        <dependency>
-            <groupId>mobicents-tcap</groupId>
-          <artifactId>impl</artifactId>
-            <version>2.1.0-SNAPSHOT</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/tcap-impl-2.1.0-SNAPSHOT.jar</systemPath>   
-        </dependency>
-        <dependency>
-            <groupId>org.mobicents.protocols.ss7.tcap.asn</groupId>
-          <artifactId>comp</artifactId>
-            <version>2.1.0-SNAPSHOT</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/lib/tcap-api-2.1.0-SNAPSHOT.jar</systemPath>   
-        </dependency>
-        <dependency>
-            <groupId>com.devoteam.srit.xmlloader.sigtran.ap.generated.map</groupId>
-          <artifactId>BN_classes_map</artifactId>
-            <version>1.0.0</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/src/main/lib/BN_classes_map.jar</systemPath>   
-        </dependency>
-        <dependency>
-            <groupId>com.devoteam.srit.xmlloader.sigtran.ap.generated.tcap</groupId>
-          <artifactId>BN_classes_tcap</artifactId>
-            <version>1.0.0</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/src/main/lib/BN_classes_tcap.jar</systemPath>   
-        </dependency>
-        <dependency>
-            <groupId>com.devoteam.srit.xmlloader.sigtran.ap.generated.cap</groupId>
-          <artifactId>BN_classes_cap</artifactId>
-            <version>1.0.0</version>
-            <scope>system</scope> 
-            <systemPath>${basedir}/src/main/lib/BN_classes_cap.jar</systemPath>   
-        </dependency>
-        
-        <!-- library for JSON parser-->
-        <dependency>
-             <groupId>com.jayway.jsonpath</groupId>
-             <artifactId>json-path</artifactId>
-             <version>2.1.0</version>
-        </dependency>
-        <dependency>
-             <groupId>com.jayway.jsonpath</groupId>
-             <artifactId>json-path-assert</artifactId>
-             <version>2.1.0</version>
-             <scope>test</scope>
-        </dependency>
-        <dependency>
-             <groupId>org.slf4j</groupId>
-             <artifactId>slf4j-simple</artifactId>
-             <version>1.7.12</version>
-        </dependency>
-        
-        <!-- javax.annotation.* annotations -->        
-        <!-- https://mvnrepository.com/artifact/com.google.code.findbugs/jsr305 -->
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>[3.0.0,)</version>
-        </dependency>
-        
-        
     </dependencies>
 </project>
